--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 <section class="ezy__header22 dark pt-24 md:pt-44 bg-white dark:bg-[#0b1727] text-indigo-900 dark:text-white relative">
   <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full object-cover z-0">
-    <source src="../assets/bg video.mp4" type="video/mp4">
+    <source src="assets/bg video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
