--- a/login.html
+++ b/login.html
@@ -368,7 +368,7 @@ select {
         <section class="ezy__footer dark py-12 bg-gray-900 text-white m-0">
             <div class="container px-4">
                 <div class="flex flex-col md:flex-row justify-between items-center">
-                    <img src="../assets/logoFooter.jpeg" alt="Smart City Logo" class="max-w-full w-40 h-auto mb-6 md:mb-0" />
+                    <img src="assets/logoFooter.jpeg" alt="Smart City Logo" class="max-w-full w-40 h-auto mb-6 md:mb-0" />
                     <p class="text-center mb-6 md:mb-0">© 2024 Citizen Link. All rights reserved.</p>
                     <ul class="flex gap-6 mb-6 md:mb-0">
                         <li>
