--- a/news.html
+++ b/news.html
@@ -198,7 +198,7 @@
   <section class="ezy__footer dark py-12 bg-gray-800 text-white">
     <div class="container px-4">
         <div class="flex flex-col md:flex-row justify-between items-center">
-            <img src="../assets/logoFooter.jpeg" alt="Smart City Logo" class="w-40 h-auto mb-6 md:mb-0" />
+            <img src="assets/logoFooter.jpeg" alt="Smart City Logo" class="w-40 h-auto mb-6 md:mb-0" />
             <p class="text-center mb-6 md:mb-0">© 2024 Smart City. All rights reserved.</p>
             <ul class="flex gap-6 mb-6 md:mb-0">
                 <li>
