--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <title>Website ka naam</title>
     <link rel="icon" href="./favicon.ico">
     <link rel="apple-touch-icon" href="./logo192.png">
-    <meta name="description" content="Template Tailwind CSS - 02 cloned" />
+    <meta name="description" content="connect with your city today : )" />
     <meta name="keywords" content="" />
     <link href="./dist/css/tailwind.min.css" rel="stylesheet">
     <link href="./dist/css/fontawesome-all.min.css" rel="stylesheet">
